# knowledge_graph

./: .gitignore  .python-version  README.md  concept_graph.ipynb  docker-compose.yaml  dockerfile  environment.yml  extract_graph.ipynb  ner.ipynb  pyproject.toml  relationships.ipynb  requirements.txt  runbook.md  zefyr.ipynb
.github/: FUNDING.yml
assets/: .$KGDiagrams.drawio.bkp  .$MarryLambKG.drawio.bkp  .$MarryLambKG.drawio.dtmp  .$MarryLambKG.drawio.png.bkp  KGDiagrams.drawio  MarryLambKG.drawio
data_input/cureus/: cureus-0015-00000040274.txt
data_output/: ner.py
data_output/MediumArticles/: chunks.csv  concepts.csv
data_output/OrfPathHealth/: chunks.csv  graph.csv  health_india_concepts.csv
data_output/cureus/: chunks.csv  graph.csv
data_output/temp/: health_india_concepts.csv  health_india_data.csv
docker_python/: Dockerfile
docs/: graph.html  index.html
helpers/: df_helpers.py  prompts.py
old_notebooks/: extract_concepts.ipynb  relationships.ipynb  zefyr.ipynb
ollama/: client.py
